@@ -738,8 +738,8 @@ CItem *CChar::GetSpellbook(SPELL_TYPE iSpell) const	// Retrieves a spellbook fro
 	ADDTOCALLSTACK("CChar::GetSpellbook");
 	// Search for suitable book in hands first
 	CItem* pReturn = nullptr;
-	CItem* pItem = LayerFind(LAYER_HAND1);    // Let's do first a direct search for any book in hand layer 1.
-	if (pItem && pItem->IsTypeSpellbook())
+	CItem* pItem = GetSpellbookLayer();
+	if ( pItem )
 	{
 		const CItemBase *pItemDef = pItem->Item_GetDef();
 		const SPELL_TYPE min = (SPELL_TYPE)pItemDef->m_ttSpellbook.m_iOffset;
@@ -752,23 +752,7 @@ CItem *CChar::GetSpellbook(SPELL_TYPE iSpell) const	// Retrieves a spellbook fro
 		    	pReturn = pItem;
 		}
     }
-
-	pItem = LayerFind(LAYER_HAND2); // on custom freeshard, it's possible to have book on layer 2
-	if ((pItem && pItem->IsTypeSpellbook()))
-	{
-		const CItemBase* pItemDef = pItem->Item_GetDef();
-		const SPELL_TYPE min = (SPELL_TYPE)pItemDef->m_ttSpellbook.m_iOffset;
-		const SPELL_TYPE max = (SPELL_TYPE)(pItemDef->m_ttSpellbook.m_iOffset + pItemDef->m_ttSpellbook.m_iMaxSpells);
-		if ((iSpell > min) && (iSpell <= max)) //Had to replace < with <= otherwise the spell would not be considered a valid one.
-		{
-			if (pItem->IsSpellInBook(iSpell))	//We found a book with this same spell, nothing more to do.
-				return pItem;
-			else // I did not find the spell, but this book is of the same school ... so i'll return this book if none better is found (NOTE: some book must be returned or the code will think that i don't have any book).
-				pReturn = pItem;
-		}
-	}
-
-	// No book found or found one which doesn't have the spell I am going to cast, then let's search in the top level of the backpack.
+	// No book found in layer 1 or 2 or found one which doesn't have the spell I am going to cast, then let's search in the top level of the backpack.
 	CItemContainer *pPack = GetPack();
 	if ( pPack )
 	{
@@ -791,6 +775,17 @@ CItem *CChar::GetSpellbook(SPELL_TYPE iSpell) const	// Retrieves a spellbook fro
 		}
 	}
 	return pReturn;
+}
+
+CItem * CChar::GetSpellbookLayer() const //Retrieve a Spellbook from Layer 1 or Layer 2
+{
+	CItem* pItem = LayerFind(LAYER_HAND1);    // Let's do first a direct search for any book in hand layer 1.
+	if (pItem && pItem->IsTypeSpellbook())
+		return pItem;
+	pItem = LayerFind(LAYER_HAND2); // on custom freeshard, it's possible to have book on layer 2
+	if (pItem && pItem->IsTypeSpellbook())
+		return pItem;
+	return nullptr;
 }
 
 short CChar::Food_GetLevelPercent() const
